--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,6 +17,11 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+        <meta-data
+            android:name="com.google.android.maps.v2.AIzaSyC5f_u9CLh_o90ZaWUxfiaXhPMf-pcEV9E"
+            android:value="AIzaSyC5f_u9CLh_o90ZaWUxfiaXhPMf-pcEV9E"
+            />
+        
         <activity
             android:name="com.rabidmongeese.CloudReminders.TemporaryActivity"
             android:label="@string/app_name" >
