--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,7 @@
     android:versionName="1.0" >
 
     <!-- Specify permissions for the Google Maps API -->
+    <uses-permission android:name="com.vogella.android.locationapi.maps.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -28,8 +29,9 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
-            android:name="com.google.android.maps.v2.AIzaSyC5f_u9CLh_o90ZaWUxfiaXhPMf-pcEV9E"
-            android:value="AIzaSyC5f_u9CLh_o90ZaWUxfiaXhPMf-pcEV9E" />
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyC25YTFY5WsJMXXQ8DjSBRtIID1n00JomI" />
+        <uses-library android:name="com.google.android.maps" />
 
         <activity
             android:name="com.rabidmongeese.CloudReminders.TemporaryActivity"
